--- a/docs/reference/rest-api/index.asciidoc
+++ b/docs/reference/rest-api/index.asciidoc
@@ -42,6 +42,7 @@ not be included yet.
 * <<rollup-apis,Rollup APIs>>
 * <<script-apis,Script APIs>>
 * <<search, Search APIs>>
+* <<search-application-apis, Search Application APIs>>
 * <<searchable-snapshots-apis, Searchable snapshots APIs>>
 * <<security-api,Security APIs>>
 * <<snapshot-restore-apis,Snapshot and restore APIs>>
@@ -84,6 +85,7 @@ include::{es-repo-dir}/repositories-metering-api/repositories-metering-apis.asci
 include::{es-repo-dir}/rollup/rollup-apis.asciidoc[]
 include::{es-repo-dir}/scripting/apis/script-apis.asciidoc[]
 include::{es-repo-dir}/search.asciidoc[]
+include::{es-repo-dir}/search-application/apis/index.asciidoc[]
 include::{es-repo-dir}/searchable-snapshots/apis/searchable-snapshots-apis.asciidoc[]
 include::{xes-repo-dir}/rest-api/security.asciidoc[]
 include::{es-repo-dir}/snapshot-restore/apis/snapshot-restore-apis.asciidoc[]
