--- a/docs/reference/search-application/apis/get-search-application.asciidoc
+++ b/docs/reference/search-application/apis/get-search-application.asciidoc
@@ -1,31 +1,31 @@
 [role="xpack"]
 [[get-search-application]]
-= Get Search Application API
-[subs="attributes"]
-++++
+=== Get Search Application
 
+++++
 <titleabbrev>Get Search Application</titleabbrev>
+++++
 
 Retrieves information about a Search Application.
 
 [[get-search-application-request]]
-== {api-request-title}
+==== {api-request-title}
 
 `GET _application/search_application/<name>`
 
 [[get-search-application-prereq]]
-== {api-prereq-title}
+==== {api-prereq-title}
 
 Requires the `manage_search-application` cluster privilege.
 
 [[get-search-application-path-params]]
-== {api-path-parms-title}
+==== {api-path-parms-title}
 
 `<name>`::
 (Required, string)
 
 [[get-search-application-response-codes]]
-== {api-response-codes-title}
+==== {api-response-codes-title}
 
 `400`::
 The `name` was not provided.
@@ -34,7 +34,7 @@ The `name` was not provided.
 No Search Application matching `name` could be found.
 
 [[get-search-application-example]]
-== {api-examples-title}
+==== {api-examples-title}
 
 The following example gets the Search Application named `my-app`:
 
