--- a/docs/reference/search-application/apis/list-search-applications.asciidoc
+++ b/docs/reference/search-application/apis/list-search-applications.asciidoc
@@ -1,25 +1,25 @@
 [role="xpack"]
 [[list-search-applications]]
-= List Search Applications API
-[subs="attributes"]
-++++
+=== List Search Applications
 
+++++
 <titleabbrev>List Search Applications</titleabbrev>
+++++
 
 Returns information about Search Applications.
 
 [[list-search-applications-request]]
-== {api-request-title}
+==== {api-request-title}
 
 `GET _application/search_application/`
 
 [[list-search-applications-prereq]]
-== {api-prereq-title}
+==== {api-prereq-title}
 
 Requires the `manage_search_application` cluster privilege.
 
 [[list-search-applications-path-params]]
-== {api-path-parms-title}
+==== {api-path-parms-title}
 
 `q`::
 (Optional, string) Query in the Lucene query string syntax, to return only Search Applications matching the query.
@@ -31,10 +31,10 @@ Requires the `manage_search_application` cluster privilege.
 (Optional, integer) The offset from the first result to fetch.
 
 [[list-search-applications-response-codes]]
-== {api-response-codes-title}
+==== {api-response-codes-title}
 
 [[list-search-applications-example]]
-== {api-examples-title}
+==== {api-examples-title}
 
 The following example lists all configured Search Applications:
 
@@ -52,9 +52,10 @@ GET _application/search_application/?from=0&size=3&q=foo
 --------------------------------------------------
 // TEST[skip:TBD]
 
-As sample response:
+A sample response:
 
-```
+[source,console-result]
+----
 {
   "count": 2,
   "results": [
@@ -68,4 +69,4 @@ As sample response:
     }
   ]
 }
-```
+----
