--- a/docs/reference/search-application/apis/index.asciidoc
+++ b/docs/reference/search-application/apis/index.asciidoc
@@ -1,9 +1,22 @@
 [[search-application-apis]]
-= Search Application APIs
+== Search Application APIs
+
+++++
+<titleabbrev>Search Application APIs</titleabbrev>
+++++
+
+---
 
 Use Search Application APIs to manage tasks and resources related to Search Applications.
+
+* <<put-search-application>>
+* <<get-search-application>>
+* <<list-search-applications>>
+* <<delete-search-application>>
+
 
 include::put-search-application.asciidoc[]
 include::get-search-application.asciidoc[]
 include::list-search-applications.asciidoc[]
 include::delete-search-application.asciidoc[]
+
