--- a/docs/reference/geospatial-analysis.asciidoc
+++ b/docs/reference/geospatial-analysis.asciidoc
@@ -4,7 +4,7 @@
 [partintro]
 --
 
-Geospatial analysis with speed, at scale. All with a stack that scales automatically.
+Use {es} for geospatial analysis with speed, at scale. All with a stack that scales automatically.
 
 The Elastic Stack is more than search. Use machine learning and alerting to put your geo data to work.
 
@@ -31,6 +31,8 @@ Data is often messy and incomplete. <<ingest,Ingest pipelines>> let you clean, t
 == Query
 
 <<geo-queries,Geo queries>> will help you answer location-driven questions.
+
+Combine geospatial queries with full text search queries for unparalleled searching experience. 
 
 [discrete]
 [[geospatial-aggregate]]
@@ -64,6 +66,8 @@ Use <<search-vector-tile-api,vector tile search API>> to consume Elasticsearch g
 == Visualize
 
 Visualize geo data with {kibana-ref}/maps.html[Kibana]. Add your map to a {kibana-ref}/dashboard.html[dashboard] to view your data from all angles.
+
+image:images/spatial/cumbre_vieja_eruption_dashboard.png[Kibana dashboard showing Cumbre Vieja eruption from Aug 31 2021 to Dec 14 2021]
 
 [discrete]
 [[geospatial-ml]]
