--- a/docs/reference/index.asciidoc
+++ b/docs/reference/index.asciidoc
@@ -59,6 +59,8 @@ include::snapshot-restore/index.asciidoc[]
 
 include::{xes-repo-dir}/security/index.asciidoc[]
 
+include::geospatial-analysis.asciidoc[]
+
 include::{xes-repo-dir}/watcher/index.asciidoc[]
 
 include::commands/index.asciidoc[]
