[ML] Add _meta field to data frame analytics config
This PR adds a new field, `_meta`, to the data frame
analytics configuration.

The `_meta` field stores an arbitrary key-value map.
Keys are strings. Values are arbitrary objects
(possibly also maps).

The `_meta` field can be updated using the data frame
analytics `_update` endpoint.

--- a/docs/reference/ml/df-analytics/apis/put-dfanalytics.asciidoc
+++ b/docs/reference/ml/df-analytics/apis/put-dfanalytics.asciidoc
@@ -253,6 +253,10 @@ include::{es-repo-dir}/ml/ml-shared.asciidoc[tag=dfas-max-optimization-rounds]
 (Optional, integer)
 include::{es-repo-dir}/ml/ml-shared.asciidoc[tag=max-trees]
 
+`_meta`::::
+(Optional, object)
+include::{es-repo-dir}/ml/ml-shared.asciidoc[tag=meta]
+
 `num_top_classes`::::
 (Optional, integer)
 Defines the number of categories for which the predicted probabilities are
