--- a/docs/reference/geospatial-analysis.asciidoc
+++ b/docs/reference/geospatial-analysis.asciidoc
@@ -1,8 +1,6 @@
+[chapter]
 [[geospatial-analysis]]
 = Geospatial analysis
-
-[partintro]
---
 
 Did you know that {es} has geospatial capabilities? https://www.elastic.co/blog/geo-location-and-search[{es} and geo] go way back, to 2010. A lot has happened since then and today {es} provides robust geospatial capabilities with speed, all with a stack that scales automatically. 
 
@@ -10,7 +8,7 @@ Not sure where to get started with {es} and geo? Then, you have come to the righ
 
 [discrete]
 [[geospatial-mapping]]
-== Geospatial mapping
+=== Geospatial mapping
 
 {es} supports two types of geo data: <<geo-point, geo_point>> fields which support lat/lon pairs, and <<geo-shape, geo_shape>> fields, which support points, lines, circles, polygons, multi-polygons, and so on. Use <<explicit-mapping,explicit mapping>> to index geo data fields.
 
@@ -18,23 +16,23 @@ Have an index with lat/lon pairs but no geo_point mapping? Use <<runtime-mapping
 
 [discrete]
 [[geospatial-ingest]]
-== Ingest
+=== Ingest
 
 Data is often messy and incomplete. <<ingest,Ingest pipelines>> lets you clean, transform, and augment your data before indexing. 
 
 * Use <<geoip-processor>> to add geographical location of an IPv4 or IPv6 address.
 * Use <<ingest-geo-grid-processor,geo-grid processor>> to convert grid tiles or hexagonal cell ids to bounding boxes or polygons which describe their shape.
-* Use <<geo-match-enrich-policy-type,geo_match enrich policy>> for reverse geocoding. For example, use {reverse-geocoding-tutorial.html}/maps.html[reverse geocoding] to visualize metropolitan areas by web traffic.
+* Use <<geo-match-enrich-policy-type,geo_match enrich policy>> for reverse geocoding. For example, use {kibana-ref}/reverse-geocoding-tutorial.html[reverse geocoding] to visualize metropolitan areas by web traffic.
 
 [discrete]
 [[geospatial-query]]
-== Query
+=== Query
 
 <<geo-queries,Geo queries>> answer location-driven questions. Find documents that intersect with, are within, are contained by, or do not intersect your query geometry. Combine geospatial queries with full text search queries for unparalleled searching experience. For example, "Show me all subscribers that live within 5 miles of our new gym location, that joined in the last year and have running mentioned in their profile".
 
 [discrete]
 [[geospatial-aggregate]]
-== Aggregate
+=== Aggregate
 
 <<search-aggregations,Aggregations>> summarizes your data as metrics, statistics, or other analytics. Use <<search-aggregations-bucket,bucket aggregations>> to group documents into buckets, also called bins, based on field values, ranges, or other criteria. Then, use <<search-aggregations-metrics,metric aggregations>> to calculate metrics, such as a sum or average, from field values in each bucket. Compare metrics across buckets to gain insights from your data.
 
@@ -55,13 +53,13 @@ Combine aggregations to perform complex geospatial analysis. For example, to cal
 
 [discrete]
 [[geospatial-integrate]]
-== Integrate
+=== Integrate
 
 Use <<search-vector-tile-api,vector tile search API>> to consume {es} geo data within existing GIS infrastructure.
 
 [discrete]
 [[geospatial-visualize]]
-== Visualize
+=== Visualize
 
 Visualize geo data with {kibana-ref}/maps.html[Kibana]. Add your map to a {kibana-ref}/dashboard.html[dashboard] to view your data from all angles.
 
@@ -71,15 +69,14 @@ image:images/spatial/cumbre_vieja_eruption_dashboard.png[Kibana dashboard showin
 
 [discrete]
 [[geospatial-ml]]
-== Machine learning
+=== Machine learning
 
 Put machine learning to work for you and find the data that should stand out with anomaly detections. Find credit card transactions that occur in an unusual locations or a web request that has an unusual source location. {ml-docs}/geographic-anomalies.html[Location-based anomaly detections] make it easy to find and explore and compare anomalies with their typical locations.
 
 [discrete]
 [[geospatial-alerting]]
-== Alerting
+=== Alerting
 
 Let your location data drive insights and action with {kibana-ref}/geo-alerting.html[geographic alerts]. Commonly referred to as geo-fencing, track moving objects as they enter or exit a boundary to receive notifications through common business systems (email, Slack, Teams, PagerDuty, and more).
 
 Interested in learning more? Follow {kibana-ref}/asset-tracking-tutorial.html[step-by-step instructions] for setting up tracking containment alerts to monitor moving vehicles.
-
