--- a/docs/reference/search-application/apis/get-search-application.asciidoc
+++ b/docs/reference/search-application/apis/get-search-application.asciidoc
@@ -52,7 +52,8 @@ A sample response:
     {
       "name": "my-app",
       "indices": [ "index1", "index2" ],
-      "analytics_collection_name": "my-analytics"
+      "analytics_collection_name": "my-analytics",
+      "template": null
     }
 }
 ----
