Update privileges.asciidoc with adding some privileges description
SF Case - 01341015

Requested to update the cluster privileges which isn't explained https://www.elastic.co/guide/en/elasticsearch/reference/master/security-privileges.html.
I typed descriptions but it probably needs to be corrected.

- manage_autoscaling
- manage_data_frame_transforms
- manage_enrich

--- a/x-pack/docs/en/security/authorization/privileges.asciidoc
+++ b/x-pack/docs/en/security/authorization/privileges.asciidoc
@@ -130,6 +130,15 @@ Service.
 `manage_transform`::
 All operations related to managing {transforms}.
 
+`manage_autoscaling`::
+All deployment operations, create or update autoscaling policy API (Need to be reviewed).
+
+`manage_data_frame_transforms`::
+Enable you to manage transforms (Need to be reviewed).
+
+`manage_enrich`::
+Enable you to manage transforms (Need to be reviewed).
+
 `manage_watcher`::
 All watcher operations, such as putting watches, executing, activate or acknowledging.
 +
