--- a/docs/reference/cluster/nodes-stats.asciidoc
+++ b/docs/reference/cluster/nodes-stats.asciidoc
@@ -2016,6 +2016,42 @@ last bucket if this bucket has no upper bound.
 The number of times a transport thread took a period of time within the bounds
 of this bucket to send a transport message.
 =======
+
+`actions`::
+(object)
+An action-by-action breakdown of the transport traffic handled by this node,
+showing the total amount of traffic and a histogram of message sizes for
+incoming requests and outgoing responses.
++
+.Properties of `actions.*.requests` and `actions.*.responses`
+[%collapsible]
+=======
+`ge`::
+(string)
+The inclusive lower bound of the bucket as a human-readable string. May be
+omitted on the first bucket if this bucket has no lower bound.
+
+`ge_bytes`::
+(integer)
+The inclusive lower bound of the bucket in bytes. May be omitted on the first
+bucket if this bucket has no lower bound.
+
+`lt`::
+(string)
+The exclusive upper bound of the bucket as a human-readable string. May be
+omitted on the last bucket if this bucket has no upper bound.
+
+`lt_bytes`::
+(integer)
+The exclusive upper bound of the bucket in bytes. May be omitted on the last
+bucket if this bucket has no upper bound.
+
+`count`::
+(integer)
+The number of times a request was received, or a response sent, with a size
+within the bounds of this bucket.
+=======
+
 ======
 
 [[cluster-nodes-stats-api-response-body-http]]
