--- a/docs/reference/behavioral-analytics/apis/put-analytics-collection.asciidoc
+++ b/docs/reference/behavioral-analytics/apis/put-analytics-collection.asciidoc
@@ -13,6 +13,12 @@ Creates an Analytics Collection.
 
 `PUT _application/analytics/<name>`
 
+[[put-analytics-collection-path-params]]
+==== {api-path-parms-title}
+
+`<name>`::
+(Required, string)
+
 [[put-analytics-collection-prereqs]]
 ==== {api-prereq-title}
 
