--- a/docs/reference/behavioral-analytics/apis/index.asciidoc
+++ b/docs/reference/behavioral-analytics/apis/index.asciidoc
@@ -7,7 +7,7 @@
 
 ---
 
-Use APIs to manage tasks and resources related to Behavioral Analytics.
+Use the following APIs to manage tasks and resources related to Behavioral Analytics:
 
 * <<put-analytics-collection>>
 * <<delete-analytics-collection>>
